--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -1,35 +1,70 @@
 <template name="layout">
-  {{> header}}
-  <div class="container">
+{{> header}}
+<div class="container">
   {{> yield}}
-  </div>
+</div>
 </template>
 
 <template name="public">
 <div class="jumbotron">
-  <h1>Hello, world!</h1>
-  <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+  <div class="container">
+    <h1>Keep your research organized.</h1>
+    <p>Manage your shifts and enrollments.</p>
+    <a href="#">Sign In</a>
+  </div>
+</div>
+<div class="study-guides">
+  <div class="container">
+    <h2>Study Guides</h2>
+    <p>Eventually, we will have links to study overviews here.</p>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <img src="http://placehold.it/350x150">
+        </div>
+        <div class="thumbnail">
+          <img src="http://placehold.it/350x150">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <img src="http://placehold.it/350x150">
+        </div>
+        <div class="thumbnail">
+          <img src="http://placehold.it/350x150">
+        </div>
+        <div class="thumbnail">
+          <img src="http://placehold.it/350x150">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <img src="http://placehold.it/350x150">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </template>
 
 <template name="header">
-  <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#perm-navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">PERM</a>
-      </div>
-      <div class="collapse navbar-collapse" id="perm-navbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-        </ul>
-      </div>
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#perm-navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">PERM</a>
     </div>
-  </nav>
+    <div class="collapse navbar-collapse" id="perm-navbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </template>
