--- a/client/views/layouts/login.html
+++ b/client/views/layouts/login.html
@@ -9,15 +9,11 @@
         <div class="container-fluid">
           <label for="login_field">Email</label>
           <input type="text" class="form-control" id="login_field" placeholder="email"/>
-
           <br />
-
           <label for="password">Password</label>
           <input type="password" class="form-control" id="password"/>
-
           <br />
-
-          <input type="submit" value="Submit" class="btn btn-primary"/>
+          <input type="submit" value="Sign in" class="btn btn-primary"/>
         </div>
       </form>
     </div>
