--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h2>Keep your research organized.</h2>
     <p>Manage your shifts and enrollments.</p>
-    <a href="#">Sign In</a>
+    <a href="{{pathFor 'signIn'}}">Sign In</a>
   </div>
 </div>
 </template>
