--- a/client/views/layouts/signin.html
+++ b/client/views/layouts/signin.html
@@ -5,13 +5,13 @@
       <h3 class="panel-title">Sign in</h3>
     </div>
     <div class="panel-body">
-      <form>
+      <form id="signin-form">
         <div class="container-fluid">
-          <label for="login_field">Email</label>
-          <input type="text" class="form-control" id="login_field" placeholder="email"/>
+          <label for="signin_email">Email</label>
+          <input type="text" class="form-control" id="signin_email" placeholder="email"/>
           <br />
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password"/>
+          <label for="signin_password">Password</label>
+          <input type="password" class="form-control" id="signin_password"/>
           <br />
           <input type="submit" value="Sign in" class="btn btn-primary"/>
         </div>
