--- a/client/views/includes/flashes.html
+++ b/client/views/includes/flashes.html
@@ -1,16 +1,16 @@
-<template name="errors">
+<template name="flashes">
 <div class="container">
   <div class="row-fluid">
-    {{#each errors}}
-    {{> error}}
+    {{#each flashes}}
+    {{> flash}}
     {{/each}}
   </div>
 </div>
 </template>
 
-<template name="error">
-<div class="alert alert-danger alert-dismissible" role="alert">
+<template name="flash">
+<div class="alert alert-{{type}} alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-  <strong>Error!</strong> {{message}}
+  <strong>{{exclaim}}!</strong> {{message}}
 </div>
 </template>
