Provided better bad signin reporting.

--- a/client/views/layouts/signin.html
+++ b/client/views/layouts/signin.html
@@ -8,7 +8,7 @@
       <form id="signin-form">
         <div class="container-fluid">
           <label for="signin_email">Email</label>
-          <input type="text" class="form-control" id="signin_email" placeholder="email"/>
+          <input type="text" class="form-control" id="signin_email" placeholder="example@email.com"/>
           <br />
           <label for="signin_password">Password</label>
           <input type="password" class="form-control" id="signin_password"/>
