Added bolding if shifts are this week.

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -26,5 +26,9 @@
 </template>
 
 <template name="shiftItem">
+{{#if thisWeek}}
+<strong><li>{{formattedDate}}, {{duration}} hours</li></strong>
+{{else}}
 <li>{{formattedDate}}, {{duration}} hours</li>
+{{/if}}
 </template>
