Added static-data pie chart.

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -2,3 +2,12 @@
 #sign-in-form {
   max-width: 400px;
 }
+
+.left-column {
+  width: 50%;
+  float: left;
+}
+.right-column {
+  width: 45%;
+  float: right;
+}
