--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -28,7 +28,8 @@
 <div class="right-column">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Your attendance stats</h3>
+      <h3 class="panel-title">Your attendance stats <span class="label
+          label-warning">TODO</span></h3>
     </div>
     <div class="panel-body">
       {{> attendanceStats}}
