Users can pickup shifts.

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -91,7 +91,7 @@
     {{>shiftItem}}
   </td>
   <td>
-    <button type="button" class="btn btn-success">Pick up</button>
+    <button type="button" class="btn btn-success" id="pickup-button">Pick up</button>
   </td>
 </tr>
 </template>
