Pie chart rerenders on drop/pickup.

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -37,7 +37,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Your attendance stats <span class="label
-          label-warning">TODO</span></h3>
+          label-warning">WIP</span></h3>
     </div>
     <div class="panel-body">
       {{> attendanceStats}}
@@ -45,8 +45,7 @@
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Dropped shifts <span class="label
-          label-warning">TODO</span></h3>
+      <h3 class="panel-title">Dropped shifts</h3>
     </div>
     <div class="panel-body">
       <table class="table table-hover table-condensed">
