Fixed pie chart styling.

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -96,5 +96,5 @@
 </template>
 
 <template name="attendanceStats">
-<div id="attendancePie" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
+<div id="attendancePie"></div>
 </template>
