--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -20,11 +20,20 @@
       <h3 class="panel-title">Your past shifts</h3>
     </div>
     <div class="panel-body">
-      <ul>
+      <table class="table table-hover table-condensed">
+        <thead>
+          <tr>
+            <th>Day</th>
+            <th>Start Time</th>
+            <th>End Time</th>
+          </tr>
+        </thead>
+        <tbody>
         {{#each expiredShifts}}
-        <li>{{> shiftItem}}</li>
+          {{> shiftItem}}
         {{/each}}
-      </ul>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
@@ -57,11 +66,9 @@
 </template>
 
 <template name="shiftItem">
-{{#if thisWeek}}
-<strong>{{formattedDate}}, {{duration}} hours</strong>
-{{else}}
-{{formattedDate}}, {{duration}} hours
-{{/if}}
+<tr>
+  {{> shiftRow}}
+</tr>
 </template>
 
 <template name="shiftItemOwned">
