--- a/client/views/includes/flashes.html
+++ b/client/views/includes/flashes.html
@@ -1,6 +1,6 @@
 <template name="flashes">
 <div class="container">
-  <div class="row-fluid">
+  <div class="row-fluid" id="flashes">
     {{#each flashes}}
     {{> flash}}
     {{/each}}
