--- a/client/views/layouts/signinButtons.html
+++ b/client/views/layouts/signinButtons.html
@@ -1,9 +1,20 @@
 <template name="signinButtons">
 <ul class="nav navbar-nav navbar-right">
-  {{#if currentUser}}
-  <li><a href="#" id="signout">Sign Out</a></li>
-  {{else}}
-  <li><a href="{{pathFor 'signIn'}}">Sign In</a></li>
-  {{/if}}
+{{#if currentUser}}
+  <li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{email}}<span class="caret"></span></a>
+  <ul class="dropdown-menu" role="menu">
+    <!--
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li class="divider"></li>
+    -->
+    <li><a href="#" id="signout">Sign out</a></li>
+  </ul>
+  </li>
+{{else}}
+<li><a href="{{pathFor 'signIn'}}">Sign In</a></li>
+{{/if}}
 </ul>
 </template>
