--- a/client/views/layouts/header.html
+++ b/client/views/layouts/header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{pathFor 'public'}}">PERM</a>
+      <a class="navbar-brand" id="perm-navbar-brand" href="{{pathFor 'public'}}">PERM</a>
     </div>
     <div class="navbar-collapse collapse" id="perm-navbar">
       <ul class="nav navbar-nav">
