--- a/client/views/users/index.html
+++ b/client/views/users/index.html
@@ -1,26 +1,34 @@
 <template name="usersIndex">
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-hover table-condensed">
-      <thead>
-        <tr>
-          <th>Email</th>
-          <th>Admin?</th>
-        </tr>
-      </thead>
-      <tbody>
-      {{#each users}}
-      {{> userItem}}
-      {{/each}}
-      </tbody>
-    </table>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="pull-right">
+          <a href="#" class="btn btn-success btn-sm">Add user</a>
+        </div>
+        <h4>Manage users</h4>
+      </div>
+      <div class="panel-body">
+        <table class="table table-hover table-condensed">
+          <thead>
+            <tr>
+              <th>Email</th>
+            </tr>
+          </thead>
+          <tbody>
+          {{#each users}}
+          {{> userItem}}
+          {{/each}}
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
 </template>
 
 <template name="userItem">
 <tr>
-  <td>{{email}}</td>
-  <td>{{isAdmin}}</td>
+  <td>{{email}} {{#if isAdmin}}(Admin){{/if}}</td>
 </tr>
 </template>
