Administrators can add new users.

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -26,3 +26,16 @@
 li .glyphicon {
   padding-right: 4px;
 }
+
+#flashes {
+  position: absolute;
+  left: 50%;
+  top: 55px;
+  z-index: 99;
+}
+
+.alert {
+  position: relative;
+  left: -50%;
+  width: 600px;
+}
