--- a/client/views/users/index.html
+++ b/client/views/users/index.html
@@ -1,10 +1,40 @@
 <template name="usersIndex">
 <div class="row">
   <div class="col-md-12">
+    <div class="modal fade" id="newUserModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title" id="myModalLabel">Create new user</h4>
+          </div>
+          <div class="modal-body">
+            <form class="user-form">
+              <div class="container-fluid">
+                <label for="user-email">Email</label>
+                <input type="text" class="form-control" id="user-email" placeholder="example@email.com"/>
+                <br />
+                <label for="user-role">Role</label>
+                <select class="form-control" id="user-role">
+                  <option value="admin">Admin</option>
+                  <option value="student">Student</option>
+                </select>
+                <br />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="button" class="newUserButton btn btn-success" data-dismiss="modal">Create</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="pull-right">
-          <a href="#" class="btn btn-success btn-sm">Add user</a>
+          <button class="btn btn-sm btn-success" data-toggle="modal"
+            data-target="#newUserModal">Add user</button>
         </div>
         <h4>Manage users</h4>
       </div>
@@ -13,6 +43,7 @@
           <thead>
             <tr>
               <th>Email</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody>
@@ -30,5 +61,6 @@
 <template name="userItem">
 <tr>
   <td>{{email}} {{#if isAdmin}}(Admin){{/if}}</td>
+  <td><button class="btn btn-sm btn-danger deleteUserButton">Delete</button></td>
 </tr>
 </template>
