--- a/client/views/layouts/signinButtons.html
+++ b/client/views/layouts/signinButtons.html
@@ -2,7 +2,7 @@
 <ul class="nav navbar-nav navbar-right">
 {{#if currentUser}}
   <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{email}}<span class="caret"></span></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{name}} <span class="caret"></span></a>
   <ul class="dropdown-menu" role="menu">
     <!--
     <li><a href="#">Action</a></li>
