--- a/client/views/users/index.html
+++ b/client/views/users/index.html
@@ -46,6 +46,7 @@
           <thead>
             <tr>
               <th>Name</th>
+              <th>Email</th>
               <th>Role</th>
               <th>Actions</th>
             </tr>
@@ -65,6 +66,7 @@
 <template name="userItem">
 <tr>
   <td>{{profile.name}}</td>
+  <td>{{email}}</td>
   <td>{{role}}</td>
   <td><button class="btn btn-sm btn-danger deleteUserButton">Delete</button></td>
 </tr>
