--- a/client/views/users/index.html
+++ b/client/views/users/index.html
@@ -1,38 +1,7 @@
 <template name="usersIndex">
 <div class="row">
   <div class="col-md-12">
-    <div class="modal fade" id="newUserModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <h4 class="modal-title" id="myModalLabel">Create new user</h4>
-          </div>
-          <div class="modal-body">
-            <form class="user-form">
-              <div class="container-fluid">
-                <label for="user-email">Email</label>
-                <input type="email" class="form-control" id="user-email" placeholder="example@email.com"/>
-                <br />
-                <label for="user-name">Name</label>
-                <input type="text" class="form-control" id="user-name" placeholder="John Doe"/>
-                <br />
-                <label for="user-role">Role</label>
-                <select class="form-control" id="user-role">
-                  <option value="student">Student</option>
-                  <option value="admin">Admin</option>
-                </select>
-                <br />
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="newUserButton btn btn-success" data-dismiss="modal">Create</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    {{> newUserModal}}
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="pull-right">
@@ -68,6 +37,56 @@
   <td>{{profile.name}}</td>
   <td>{{email}}</td>
   <td>{{role}}</td>
-  <td><button class="btn btn-sm btn-danger deleteUserButton">Delete</button></td>
+  <td><button class="btn btn-sm btn-danger" data-toggle="modal"
+      data-target="#{{_id}}-confirmDeleteModal">Delete</button></td>
 </tr>
+<div class="modal fade" id="{{_id}}-confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <p>Please confirm deletion of {{profile.name}}({{email}}).</p>
+        <p class="text-danger">This cannot be undone!</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button class="btn btn-danger deleteUserButton" data-dismiss="modal">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+</template>
+
+<template name="newUserModal">
+<div class="modal fade" id="newUserModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Create new user</h4>
+      </div>
+      <div class="modal-body">
+        <form class="user-form">
+          <div class="container-fluid">
+            <label for="user-email">Email</label>
+            <input type="email" class="form-control" id="user-email" placeholder="example@email.com"/>
+            <br />
+            <label for="user-name">Name</label>
+            <input type="text" class="form-control" id="user-name" placeholder="John Doe"/>
+            <br />
+            <label for="user-role">Role</label>
+            <select class="form-control" id="user-role">
+              <option value="student">Student</option>
+              <option value="admin">Admin</option>
+            </select>
+            <br />
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="newUserButton btn btn-success" data-dismiss="modal">Create</button>
+      </div>
+    </div>
+  </div>
+</div>
 </template>
