--- a/client/views/users/index.html
+++ b/client/views/users/index.html
@@ -44,8 +44,8 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <p>Please confirm deletion of {{profile.name}}({{email}}).</p>
-        <p class="text-danger">This cannot be undone!</p>
+        <p>Please confirm deletion of {{profile.name}} ({{email}}).</p>
+        <p class="text-danger"><strong>This cannot be undone!</strong></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
