Users have their own page (visible by admin cur.)
Only admins are able to view the pages (to be changed...) and
admins can create and delete shifts for the user from the page.

--- a/client/views/shifts/index.html
+++ b/client/views/shifts/index.html
@@ -6,7 +6,7 @@
         <h3 class="panel-title">Your attendance stats</h3>
       </div>
       <div class="panel-body">
-        {{> attendanceStats}}
+        <div id="{{userId}}-attendancePie"></div>
       </div>
     </div>
   </div>
@@ -135,7 +135,6 @@
 </template>
 
 <template name="attendanceStats">
-<div id="attendancePie"></div>
 </template>
 
 <template name="shiftRow">
