--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -107,7 +107,8 @@
 <tr>
   {{> shiftRow}}
   <td>
-    <button class="deleteShiftButton btn btn-danger btn-sm">{{_id}}</button>
+    <button class="deleteShiftButton btn btn-danger btn-sm">Delete</button>
+    <button class="dropShiftButton btn btn-warning btn-sm">Drop</button>
   </td>
 </tr>
 </template>
