--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -81,16 +81,20 @@
             </div>
             <br />
             <label for="fromDate">Start Date</label>
-            <input type="date" class="form-control" id="fromDate">
+            <input type="date" class="form-control" id="fromDate"
+            value={{startDate}}>
             <br />
             <label for="toDate">End Date</label>
-            <input type="date" class="form-control" id="toDate">
+            <input type="date" class="form-control" id="toDate"
+            value={{endDate}}>
             <br />
             <label for="startTime">Start Time</label>
-            <input type="time" step="1800" class="form-control" id="startTime">
+            <input type="time" step="1800" class="form-control" id="startTime"
+            value={{startTime}}>
             <br />
             <label for="endTime">End Time</label>
-            <input type="time" step="1800" class="form-control" id="endTime">
+            <input type="time" step="1800" class="form-control" id="endTime"
+            value={{endTime}}>
           </div>
         </form>
       </div>
