Added Jianling as fixture. Fixed available shifts.

--- a/client/views/users/show.html
+++ b/client/views/users/show.html
@@ -7,9 +7,12 @@
         <h3 class="panel-title">Profile</h3>
       </div>
       <div class="panel-body">
+        <!--
         <div class="avatar">
           <img src="http://placehold.it/230" alt="Avatar">
         </div>
+        -->
+        <p>{{profile.name}}</p>
       </div>
     </div>
   </div>
